# KasperskyIntership

./: CMakeLists.txt  README.md  base.csv
include/: md5.h  scanner_lib.h  utils.h
src/: main.cpp  md5.cpp  scanner_lib.cpp  utils.cpp
testfiles/: test - Copy (11).txt  test - Copy (7).txt
tests/: test_md5.cpp  test_scanner.cpp
